Tweaks to make styles all nice and happy on mobile device - essentially bug fixes

--- a/src/styles/components/subtle-footer/subtle-footer-inline.scss
+++ b/src/styles/components/subtle-footer/subtle-footer-inline.scss
@@ -45,7 +45,7 @@
 @media (min-width: $break-xsmall) {
   .subtle-footer {
     height: auto;
-    padding: ($base-line-height) 0;
+    margin: ($base-line-height) 0;
   }
 
   .subtle-footer__social-link-item {
@@ -81,6 +81,6 @@
 
 @media (min-width: $break-small) {
   .subtle-footer {
-    padding: ($base-line-height * 2) 0;
+    margin: ($base-line-height * 2) 0;
   }
 }
