--- a/src/styles/components/title-block-item/title-block-item-inline.scss
+++ b/src/styles/components/title-block-item/title-block-item-inline.scss
@@ -74,24 +74,19 @@
     padding-bottom: $base-line-height * 1;
   }
 
-  .title-block-item__title {
-    @include typography-font-size($medium-font-size);
-    letter-spacing: 0.8rem;
-  }
-
   .title-block__content {
     padding-top: $base-line-height;
     padding-bottom: $base-line-height;
   }
 }
 
-@media (min-width: $break-small) {
-  .title-block-item.is-padded {
-    padding: ($base-line-height * 4) ($base-line-height * 1.5);
-  }
-
+@media (min-width: $break-medium) {
   .title-block-item__toptext {
     padding-bottom: $base-line-height * 3;
+  }
+
+  .title-block-item.is-padded {
+    padding: ($base-line-height * 4) ($base-line-height * 1.5);
   }
 
   .title-block-item__title {
