--- a/src/styles/pages/about/_about-inline.scss
+++ b/src/styles/pages/about/_about-inline.scss
@@ -9,7 +9,7 @@
   display: table;
 
   margin-bottom: 0;
-  padding: 0 ($base-line-height / 2);
+  padding: 0 ($base-line-height);
 
   list-style: none;
 }
