--- a/src/styles/pages/blog-index/_blog-index-inline.scss
+++ b/src/styles/pages/blog-index/_blog-index-inline.scss
@@ -1,3 +1,5 @@
+@import '../../variables/colors';
+
 body {
   display: block;
 }
@@ -9,6 +11,7 @@ body {
   flex: 1;
 }
 
-.blog-index__list-container a:first-child .title-block-item.is-padded {
+.blog-index__list-container a:first-of-type .title-block-item.is-padded {
+  background-color: $secondary-bg-color;
   padding-top: ($base-line-height * 4);
 }
