--- a/src/styles/pages/home/_home-inline.scss
+++ b/src/styles/pages/home/_home-inline.scss
@@ -1,11 +1,11 @@
 @import '../../components/twitter-block/twitter-block-mixins';
 @import '../../components/youtube-block/youtube-block-mixins';
 
-@media (min-width: $break-small) {
-  .twitter-block, .youtube-block {
-    width: 50%;
-  }
-}
+//@media (min-width: $break-small) {
+  //.twitter-block, .youtube-block {
+  //  width: 50%;
+  //}
+//}
 
 @media (min-width: $break-small) {
   @include youtube-block-xsmall();
